--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,10 @@
             <artifactId>spring-cloud-starter-config</artifactId>
             <version>2.2.0.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-eureka</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>io.lettuce</groupId>
