--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+spring.application.name=book-service
+spring.cloud.config.name=book-service
+
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.url=jdbc:mysql://localhost:3306/cloud?serverTimezone=UTC&useSSL=false&useUnicode=yes&characterEncoding=UTF-8
 spring.datasource.username=root
@@ -8,11 +11,12 @@ logging.level.org.springframework.web=DEBUG
 logging.level.org.hibernate=ERROR
 
 server.port=8085
-spring.application.name=book-service
 
-spring.cloud.config.name=book-service
-spring.cloud.config.discovery.service-id=config
+spring.cloud.config.discovery.service-id=configserver
 spring.cloud.config.discovery.enabled=true
 spring.cloud.config.username=configUser
 spring.cloud.config.password=configPassword
 eureka.client.serviceUrl.defaultZone=http://discUser:discPassword@localhost:8083/eureka/
+
+eureka.instance.non-secure-port=80
+eureka.instance.hostname=localhost
