--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,7 @@ spring.cloud.config.username=configUser
 spring.cloud.config.password=configPassword
 eureka.client.serviceUrl.defaultZone=http://discUser:discPassword@discovery:8083/eureka/
 
-eureka.instance.hostname=${vcap.application.uris[0]:localhost}
+eureka.instance.hostname=${vcap.application.uris[0]:discovery}
 eureka.instance.prefer-ip-address: true
 eureka.instance.lease-renewal-interval-in-seconds=10
 eureka.instance.lease-expiration-duration-in-seconds=20
